FIX Overflow in Final screen one

--- a/scss/pages/_activities_final_1.scss
+++ b/scss/pages/_activities_final_1.scss
@@ -46,11 +46,9 @@ body.body_clase.view-mode {
             }
           }
         }
-        .oxfl-final-screen-one-wrapper-active & {
-          display: block;
-        }
       }
       &-active {
+        overflow: hidden;
         .oxfl-final-screen-one {
           display: block;
         }
